# cppplayground

./: CMakeLists.txt  LICENSE.md  README.md  main.cpp  setupCMake
src/: BinomialOpinion.h  DiagonalTraversal.cpp  ExitCode.h  FlexArray.h  MultinomialOpinion.h  SubjectiveLogic.h  enums.h  floatingPointHelper.h  interview.cpp  main.cpp  rangeHelper.h  relu.cpp
src/patterns/: objectPool.cpp
src/subjective_logic/: MultinomialOpinion.h  Operations.h  floatingPointHelper.h
test/: binomialOpinionTest.cpp  multinomialOpinionTest.cpp  tests.cpp
